--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,16 @@
 *.md~1~
 *.md~2~
+*.html~
 *.html~1~
 *.html~2~
 *.html~3~
 *.html~4~
+*.html~5~
 *.marks
+*.css~
 *.css~1~
 *.css~2~
-*.html~5~
 *.css~3~
-*.bak
 *.css~4~
 *.css~5~
+*.bak
