--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,20 @@
+*.bak
+*.marks
 *.md~1~
 *.md~2~
+*.bak.html
+*.html.html
+*.new.html
+*.old.html
 *.html~
 *.html~1~
 *.html~2~
 *.html~3~
 *.html~4~
 *.html~5~
-*.marks
 *.css~
 *.css~1~
 *.css~2~
 *.css~3~
 *.css~4~
 *.css~5~
-*.bak
