glob patterns: wildcards to shorten the list.

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,11 @@
 *.bak
 *.marks
-*.md~1~
-*.md~2~
+*.md~*
 *.bak.html
 *.html.html
 *.new.html
 *.old.html
 *.html~
-*.html~1~
-*.html~2~
-*.html~3~
-*.html~4~
-*.html~5~
+*.html~*
 *.css~
-*.css~1~
-*.css~2~
-*.css~3~
-*.css~4~
-*.css~5~
+*.css~*
